--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-frozendict (0.5-2) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:37:44 +0100
+
 python-frozendict (0.5-1) unstable; urgency=medium
 
   * Initial release. (Closes: #810086)
