--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ python-frozendict (0.5-2) UNRELEASED; urgency=medium
   * d/rules: Changed UPSTREAM_GIT protocol to https
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
+  * Bumped debhelper compat version to 10
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:37:44 +0100
 
